chenged the theme

--- a/css/style1.css
+++ b/css/style1.css
@@ -10,29 +10,28 @@ html, body {
 }
 
 body {
-    background: linear-gradient(69deg, #0ffbf2, #0a27c6, #f2102c);
-    background-size: 600% 600%;
-    -webkit-animation: Gradient 11s ease infinite;
-    -moz-animation: Gradient 11s ease infinite;
-    animation: Gradient 11s ease infinite;
+    background: linear-gradient(121deg, #3b00f3, #f30000, #42f300);
+background-size: 600% 600%;
+-webkit-animation: AnimationName 31s ease infinite;
+-moz-animation: AnimationName 31s ease infinite;
+animation: AnimationName 31s ease infinite;
 }
     
-    
-    @-webkit-keyframes Gradient {
-        0%{background-position:0% 50%}
-        50%{background-position:100% 50%}
-        100%{background-position:0% 50%}
-    }
-    @-moz-keyframes Gradient {
-        0%{background-position:0% 50%}
-        50%{background-position:100% 50%}
-        100%{background-position:0% 50%}
-    }
-    @keyframes Gradient { 
-        0%{background-position:0% 50%}
-        50%{background-position:100% 50%}
-        100%{background-position:0% 50%}
-    }
+@-webkit-keyframes AnimationName {
+    0%{background-position:15% 0%}
+    50%{background-position:86% 100%}
+    100%{background-position:15% 0%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:15% 0%}
+    50%{background-position:86% 100%}
+    100%{background-position:15% 0%}
+}
+@keyframes AnimationName { 
+    0%{background-position:15% 0%}
+    50%{background-position:86% 100%}
+    100%{background-position:15% 0%}
+}
     
 
 #snackbar {
@@ -93,7 +92,7 @@ div.tab button {
     padding: 14px 16px;
     transition: 0.3s;
     font-size: 17px;
-    color:red;
+    color:white;
 }
 
 /* Change background color of buttons on hover */
@@ -103,7 +102,7 @@ div.tab button:hover {
 
 /* Create an active/current tablink class */
 div.tab button.active {
-    background-color: #ccc;
+    background-color: black;
 }
 
 /* Style the tab content */
@@ -112,6 +111,6 @@ div.tab button.active {
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
-    background-color:rgba(0, 0, 0, 0.7);
+    background-color:rgba(1, 1, 1, 0.7);
     color:#fff;
 }
